# Rss_Reader_Tauri

./: README.md  package.json
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  config.toml  tauri.conf.json
src-tauri/src/: ai_translator.rs  db.rs  lib.rs  main.rs  models.rs  rss.rs
